@@ -4,3 +4,6 @@ div.ant-typography {
 :host ::ng-deep .ant-tabs-extra-content {
   width: 100%;
 }
+.spent-progress {
+  max-width: 30rem;
+}
